[package]
authors = [
    "Tushar G Hombal <tusharh75@gmail.com>"
]
categories = ["gui", "wasm", "web-programming"]
description = "Makes use of the yew-wasm-pack-minimal template to generate a starter project that helps build chrome extensions with Yew."
keywords = ["yew", "wasm", "wasm-bindgen", "web", "wasm pack", "chrome-extension-with-rust"]
name = "passmanager"
edition = "2021"
readme = "README.md"
version = "0.1.0"


[dependencies]
gloo = "0.11.0"
js-sys = "0.3.67"
serde = "1.0.195"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.111"
use = "0.0.1-pre.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.40"
web-sys = "0.3.67"
yew = { version="0.21.0", features=["csr"] }
yew-hooks = "0.3.0"
yew-router = "0.18.0"
